css/main.scss
---
# Only the main Sass file needs front matter (the dashes are enough)
---
@charset "utf-8";

// Our variables
$base-font-family: "Helvetica Neue", Helvetica, Arial, sans-serif;
$base-font-size:   16px;
$base-font-weight: 400;
$small-font-size:  $base-font-size * 0.875;
$base-line-height: 1.5;

$spacing-unit:     30px;

$text-color:       #BBB;
$background-color: #111;
$brand-color:      #4a9aff;

$grey-color:       #828282;
$grey-color-light: darken($grey-color, 40%);
$grey-color-dark:  lighten($grey-color, 25%);

// Width of the content area
$content-width:    800px;

$on-palm:          600px;
$on-laptop:        800px;

// Minima also includes a mixin for defining media queries.
// Use media queries like this:
// @include media-query($on-palm) {
//     .wrapper {
//         padding-right: $spacing-unit / 2;
//         padding-left: $spacing-unit / 2;
//     }
// }

// Import partials from the `minima` theme.
@import "minima";
@import "base";


.site-header {
		background-color: #16506b;
		background: linear-gradient(322deg, #001027, #021335, #0c2247, #16506b, #26607b, #15719b);
		background-size: 1200% 1200%;

		box-shadow: inset 0 0 0 1000px rgba(0,0,0,.5);

		-webkit-animation: AnimationName 60s ease infinite;
		-moz-animation: AnimationName 60s ease infinite;
		animation: AnimationName 60s ease infinite;

		@-webkit-keyframes AnimationName {
			0%{background-position:25% 0%}
			50%{background-position:76% 100%}
			100%{background-position:25% 0%}
		}
		@-moz-keyframes AnimationName {
			0%{background-position:25% 0%}
			50%{background-position:76% 100%}
			100%{background-position:25% 0%}
		}
		@keyframes AnimationName {
			0%{background-position:25% 0%}
			50%{background-position:76% 100%}
			100%{background-position:25% 0%}
		}

		margin-top: -5px;
		border-bottom: 0px;

		// Positioning context for the mobile navigation icon
		position: relative;
}

@media screen and (max-width: 1100px) {
	.site-logo {
		height: 54px;
	}
}

.site-header .wrapper {
	max-width: -webkit-calc(1600px - (30px * 2));
	max-width: calc(1600px - (30px * 2));
}

.site-title {
		font-size: 72px;
		font-weight: 300;
		line-height: 500px;
		letter-spacing: -1px;
		margin-bottom: 0;
		float: left;

		&,
		&:visited {
				color: $grey-color-dark;
		}
}
@media screen and (max-width: 1100px) {
	.site-title {font-size: 24px;}
}
@media screen and (max-width: $on-palm) {
	.site-title {line-height: 200px;}
}
.site-nav {
	color: #FFF;
	float: right;
	line-height: 500px; }

.header-diag {
	width: 0;
	height: 0;
	border: 0;
	padding: 0;
	margin: 0;
	border-style: solid;
	border-width: 90px 100vw 0 0;
	border-color: transparent $background-color transparent transparent;
	//transform: scale(1.0001);
}

.highlight {
	-webkit-tab-size: 2 !important;
		 -moz-tab-size: 2 !important;
			 -o-tab-size: 2 !important;
					tab-size: 2 !important;
}

html, body {
		max-width: 100%;
		overflow-x: hidden;
}

//Album section
#photos {
	 line-height: 0;
}

.hvrbox,
.hvrbox * {
	box-sizing: border-box;
}
.hvrbox {
	position: relative;
	display: inline-block;
	overflow: hidden;
	width: 33.33%;
	margin-right: -4px; //lol fuck
	height: auto;
}
@media (max-width: 800px) {
	.hvrbox {
		width: 50%;
	}
}
@media (max-width: 500px) {
	.hvrbox {
		width: 100%;
	}
}
.hvrbox img {
	max-width: 100%;
}
.hvrbox .hvrbox-layer_bottom {
	display: block;
}
.hvrbox .hvrbox-layer_top {
	opacity: 0;
	position: absolute;
	top: 0;
	left: 0;
	right: 0;
	bottom: 0;
	width: 100%;
	height: 100%;
	background: rgba(0, 0, 0, 0.8);
	color: #fff;
	padding: 15px;
	-moz-transition: all 0.4s ease-in-out 0s;
	-webkit-transition: all 0.4s ease-in-out 0s;
	-ms-transition: all 0.4s ease-in-out 0s;
	transition: all 0.4s ease-in-out 0s;
}
.hvrbox:hover .hvrbox-layer_top,
.hvrbox.active .hvrbox-layer_top {
	opacity: 1;
}
.hvrbox .hvrbox-text {
	text-align: center;
	font-size: 18px;
	display: inline-block;
	position: absolute;
	top: 50%;
	left: 50%;
	line-height: 1;
	-moz-transform: translate(-50%, -50%);
	-webkit-transform: translate(-50%, -50%);
	-ms-transform: translate(-50%, -50%);
	transform: translate(-50%, -50%);
}
.hvrbox .hvrbox-text_mobile {
	font-size: 15px;
	border-top: 1px solid rgb(179, 179, 179); /* for old browsers */
	border-top: 1px solid rgba(179, 179, 179, 0.7);
	margin-top: 5px;
	padding-top: 2px;
	display: none;
	line-height: 1;
}
.hvrbox.active .hvrbox-text_mobile {
	display: block;
}
.hvrbox-date {
	opacity: 0.75;
}
//End album section

